--- a/home5/build.gradle
+++ b/home5/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.14.2'
 // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
+// https://mvnrepository.com/artifact/org.postgresql/postgresql
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 
 }
 
